# QBee

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  QBee_tutorial.ipynb  Quadratizations in Newton Polyhedral.ipynb  README.md  TEMP  Temp.ipynb  config.ini  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test_systems.py  tests.py  vizualization.py
PythonPachage/: AST_walk.py  QBee.py  SymbolsHolder.py  tests.py
PythonPackage/: AST_walk.py  EquationSystem.py  QBee.py  SymbolsHolder.py  combinations.py  examples.ipynb  polynomial.py  polynomialization.py  qbee.py  quadratic_linearization.py  replacement_heuristics.py  requirements.txt  statistics.py  structures.py  tests.py  util.py
benchmark/: Lifeware comparison.md  circular.py  hard.py  hill.py  list.py  long_monomial.py  main.py  x_plus_1_series.py
docs/: build.py  conf.py  index.rst
examples/: Examples_BOPK2023.ipynb  __init__.py  comparisons.ipynb  comparisons.py  example_basic.py  example_combistion.py  example_dimagnostic_basic.py  example_dimagnostic_solarwind.py  example_dimagnostic_tubular_exponential.py  example_dimagnostic_tubular_poly.py  example_inputs.py  example_inputs2.py  impossible_quadratization_for_given_input_variables_restrictions.py  nonlinear_examples.ipynb  numerical_integration.py  order_of_input_variables_derivatives.py  polynomialization.py  polyreaction.py  profiling.ipynb  quadratization.ipynb  solarwind.py  solarwind_corrected.py  solarwind_laurent.py  solarwind_laurent2.py  systems.py  tub_reactor_exponential.py
log/: log.feather  quad_systems.pkl
old_examples/: polynomialization.ipynb
qbee/: AST_walk.py  __init__.py  algorithm.py  bb.py  combinations.py  decomposition.py  dimension_agnostic.py  examples.py  experimental.py  experiments.py  heuristics.py  main.py  no_C4_count.py  polynomialization.py  printer.py  quadratic_linearization.py  quadratization.py  replacement_heuristics.py  selection.py  structures.py  substitution_heuristics.py  util.py  vizualization.py
tests/: benchmark.py  circular.py  hard.py  hill.py  lifeware_conjecture.py  main.py  test_API.py  test_AST_walk.py  test_EquationSystem.py  test_VariablesHolder.py  test_benchmark_quadratization.py  test_circular.py  test_dimension_agnostic.py  test_hard.py  test_hill.py  test_input_functions.py  test_laurent.py  test_lifeware_conjecture.py  test_pde.py  test_polynomialization.py  test_quadratization.py  test_replacement_heuristics.py  test_utility_functions.py  (+3 more)
(+96 files in other folders)
