[tool.poetry]
name = "qbee"
version = "0.8.0"
description = "Quadratization of differential equations in python"
authors = ["Andrey Bychkov, Gleb Pogudin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.2"
sympy = "^1.5.0"
pandas = "^1"
numpy = "^1"
scipy = "^1"
tqdm = "^4"
memory_profiler = "*"
pyarrow = "^10"
ordered-set = "*"
pygal = "^3.0.0"


[tool.poetry.group.dev.dependencies]
networkx = "*"
matplotlib = "*"
pyvis = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-benchmark = "^4.0.0"
pygal = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "experimental: test for unstable features, may fail (deselect with '-m \"not experimental\"')",
    "expensive: slow tests which are needed mostly for important releases (deselect with '-m \"not experimental\"')"
]

[tool.poetry.scripts]
tests = "tests:tests"
benchmarks = "tests:benchmarks"